changed preseed files

--- a/preseeds/server.cfg
+++ b/preseeds/server.cfg
@@ -1,3 +1,4 @@
+
 # https://help.ubuntu.com/lts/installation-guide/example-preseed.txt
 
 # installer
@@ -10,19 +11,17 @@ d-i localechooser/supported-locales en_US.UTF-8, de_DE.UTF-8
 d-i console-setup/ask_detect boolean false
 d-i keyboard-configuration/layoutcode string de
 
-# network????
+# network
 d-i netcfg/choose_interface select auto
-#d-i netcfg/get_hostname string unassigned-hostname
-#d-i netcfg/get_domain string unassigned-domain
 
 # mirror
-d-i mirror/germany string manual
-#d-i mirror/http/hostname string ftp.uni-stuttgart.de
+#d-i mirror/germany string manual
+d-i mirror/http/hostname string ftp.uni-stuttgart.de
 
 # clock and timezone
 d-i clock-setup/utc boolean true
 d-i time/zone string Europe/Berlin
-#d-i clock-setup/ntp boolean true
+d-i clock-setup/ntp boolean true
 
 # partition
 # config it manualy
@@ -35,12 +34,17 @@ d-i passwd/user-password-crypted password ee11cbb19052e40b07aac0ca060c23ee
 d-i user-setup/encrypt-home boolean false
 
 # apt
-# more?
+# for saltstack-ppa:
+d-i apt-setup/local0/repository string deb http://ppa.launchpad.net/saltstack/salt/ubuntu trusty main 
+d-i apt-setup/local0/comment string SaltStack-Team Staging ppa
+d-i apt-setup/local0/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&fingerprint=on&search=0x4759FA960E27C0A6
+
 d-i pkgsel/update-policy select none
+d-i pkgsel/upgrade select safe-upgrade
+d-i pkgsel/include string openssh-server build-essential salt-minion
 
 # grub
 d-i grub-installer/only_debian boolean true
-#d-i grub-installer/with_other_os boolean true needed?
 
 # finish
 d-i cdrom-detect/eject boolean false
