--- a/preseeds/server.cfg
+++ b/preseeds/server.cfg
@@ -8,8 +8,21 @@ d-i debian-installer/locale string en_US.UTF-8
 d-i localechooser/supported-locales en_US.UTF-8, de_DE.UTF-8
 
 # keyboard
-d-i console-setup/ask_detect boolean false
+#d-i console-setup/ask_detect boolean false
+#d-i keyboard-configuration/layoutcode string de
+
+d-i console-tools/archs select de
+d-i console-keymaps-at/keymap select de
+d-i keyboard-configuration/xkb-keymap select de
+d-i console-setup/modelcode string pc105
 d-i keyboard-configuration/layoutcode string de
+d-i console-setup/variantcode string nodeadkeys
+
+keyboard-configuration keyboard-configuration/modelcode string pc105
+keyboard-configuration keyboard-configuration/layout select Germany
+keyboard-configuration keyboard-configuration/variant select Germany - Eliminate dead keys
+keyboard-configuration keyboard-configuration/variantcode string nodeadkeys
+keyboard-configuration keyboard-configuration/layoutcode string de
 
 # network
 d-i netcfg/choose_interface select auto
