--- a/recipes/ubuntu-14.04-mini/preseeds/desktop.cfg
+++ b/recipes/ubuntu-14.04-mini/preseeds/desktop.cfg
@@ -1,30 +1,5 @@
+
 # https://help.ubuntu.com/lts/installation-guide/example-preseed.txt
-
-# ubiquity
-#ubiquity countrychooser/shortlist select DE
-#ubiquity countrychooser/countryname select Germany
-#ubiquity countrychooser/country-name string Germany
-
-#debconf debconf/language string en
-#console-setup	console-setup/layoutcode	select	de
-#console-setup	console-setup/modelcode	select	pc105
-#console-setup	console-setup/layout	select	Germany
-#console-setup	console-setup/variant	select	Germany
-# ubiquity console-keymaps-at/keymap select de
-
-#ubiquity tzconfig/gmt boolean false
-#ubiquity time/zone select Europe/Berlin
-
-#ubiquity languagechooser/language-name select English
-#ubiquity localechooser/supported-locales multiselect en_US.UTF-8, de_DE.UTF-8
-#ubiquity localechooser/languagelist select en
-
-#ubiquity debian-installer/country string EN
-#ubiquity debian-installer/language string en
-#ubiquity debian-installer/locale select en_US.UTF-8
-
-#ubiquity ubiquity/summary note
-#ubiquity ubiquity/reboot boolean true
 
 # installer
 d-i debian-installer/language string en
@@ -33,8 +8,21 @@ d-i debian-installer/locale string en_US.UTF-8
 d-i localechooser/supported-locales en_US.UTF-8, de_DE.UTF-8
 
 # keyboard
-d-i console-setup/ask_detect boolean false
+#d-i console-setup/ask_detect boolean false
+#d-i keyboard-configuration/layoutcode string de
+
+d-i console-tools/archs select de
+d-i console-keymaps-at/keymap select de
+d-i keyboard-configuration/xkb-keymap select de
+d-i console-setup/modelcode string pc105
 d-i keyboard-configuration/layoutcode string de
+d-i console-setup/variantcode string nodeadkeys
+
+keyboard-configuration keyboard-configuration/modelcode string pc105
+keyboard-configuration keyboard-configuration/layout select Germany
+keyboard-configuration keyboard-configuration/variant select Germany - Eliminate dead keys
+keyboard-configuration keyboard-configuration/variantcode string nodeadkeys
+keyboard-configuration keyboard-configuration/layoutcode string de
 
 # network
 d-i netcfg/choose_interface select auto
