--- a/recipes/ubuntu-14.04-mini/preseeds/desktop.cfg
+++ b/recipes/ubuntu-14.04-mini/preseeds/desktop.cfg
@@ -48,9 +48,9 @@ d-i user-setup/encrypt-home boolean false
 
 # apt
 # for saltstack-ppa:
-d-i apt-setup/local0/repository string deb http://ppa.launchpad.net/saltstack/salt/ubuntu trusty main
-d-i apt-setup/local0/comment string SaltStack-Team Staging ppa
-d-i apt-setup/local0/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&fingerprint=on&search=0x4759FA960E27C0A6
+d-i apt-setup/local0/repository string deb http://repo.saltstack.com/apt/ubuntu/14.04/amd64/latest trusty main
+d-i apt-setup/local0/comment string Saltstack Repository: Latest
+d-i apt-setup/local0/key string http://repo.saltstack.com/apt/ubuntu/14.04/amd64/latest/SALTSTACK-GPG-KEY.pub
 
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select safe-upgrade
